Fix bug for overlapping in filter styles

--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -13,7 +13,6 @@
 	float: left;
 	height: 100%;
 	width: 25%;
-
 	line-height: 20px;
 	border-right: 1px solid #DDDDDD;
 }
@@ -24,26 +23,25 @@
 	height: 100%;
 	float: left;
     width: 25%;
-
 	line-height: 20px;
 }
 
 .popover {
+	position: absolute;
 	list-style-type: none;
 	display: none;
 	background-color: #FAFAFA;
 	width: 100%;
-
 	margin-left: -1px;
 	margin-top: 8px;
 	padding: 25px 0px;
-
 	border: 1px solid #DDDDDD;
 	border-radius: 4px;
     overflow: scroll;
     max-height: 300px;
-    overflow-x: hidden;
-	z-index: 9999;
+	max-width: 250px;
+    overflow-x: auto;
+	z-index: 9;
 }
 
 .locations:hover .popover {
@@ -84,13 +82,11 @@ h4 {
 button {
 	color: #FFFFFF;
 	font-size: 18px;
-	
 	height: 48px;
 	width: 20%;
 	background-color: #FF5A5F;
 	border-style: none;
 	border-radius: 4px;
-
 	float: right;
 	margin-top: 11px;
 	margin-bottom: 11px;
